--- a/index.html
+++ b/index.html
@@ -2,42 +2,189 @@
 <html lang ="en">
 	<head>
 	<meta charset ="utf-8">
+	<meta name ="viewport" content="width=device-width, intial-scale=1.0">
 	<title>My first Bitstarter</title>
+	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+     	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-button.css">
+	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+
 	<link type = "text/css" rel ="stylesheet"
                href = "https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 	<style type= "text/css">
-	body {
-	padding-top: 20px;
-	padding-bottom: 40px:
+
+	/*Large Desktop*/
+	@media (min-width: 980px) {
+		body {
+			padding-top:60px;
+		}
+		.linediv-r {
+			border-left: 1px white solid;
+		}
 	}
-	.container {
-	width : 960px;
+
+	/*Landscape phones and down */
+	@media (max-width: 480px) {
+		.copy {
+			padding: 2.5% 10%;
+		}
+		.linediv-l {
+			border-bottom: 1px white solid;
+		}
+		.linediv-r {
+			border-top: 1px white solid;
+		}
 	}
+	
+	/*All form factor*/
+			
+        body {
+		font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	}
+
+	.heading, .subheading {
+		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+ 	}
+
 	p.lead {
-	padding-top: 15px;
+		padding-top: 1.5%;
+		font-size: 24px;
+		line-height: 30px;
 	}
-	.navigation, .pitch, .section1, .section2, .faq, .footer {
-	padding: 10px 0px 10px 0px;
+	
+	p {
+		font-size: 18px;
+		line-height: 24px;
 	}
-	.video, .thermometer, .order, .social {
-	border: 1px dotted;
-	text-align: center;
+
+	.pitch {
+		padding: 2.5% 0%;
 	}
-	.video {
-	height: 124px;
-	line-height: 124px;
+
+	.order {
+		padding: 2% 0%;
 	}
-	.theromoter, .order, .soial {
-	height: 40px;
-	line-height: 40px;
+
+	.actions {
+		background-color: #343434;
+		padding: 3% 0%;
 	}
-	div.row {
-	border: 1px solid;
+
+	.video, .thermometer, .order, .social, .statistics {
+		text-align: center;
 	}
-	</style>
-	</head>
+	
+	.statistics h2, .statistics p {
+		color: white;
+	}
+	
+	.copy {
+		padding-top: 2.5%;
+		padding-bottom: 2.5%;
+		text-align: justify;
+	}
+	
+	.asset {
+		padding: 2.5% 0%;
+	}
+
+	.footer {
+		color: #cccccc;
+		text-align: center;
+	}
+
+	.footer p {
+		font-size: 11px;
+	}
+
+	.footer a {
+		color:#ccccff;
+	}
+	
+			</style>
+		</head>
 	<body>
-	<div class = "container">
+	
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class = "container">
+				<button type="button" class="btn btn-navbar"
+					data-toggle="collapse" data-target=".nav-collapse">
+				<span class="icon bar"></span>
+				<span class="icon bar"></span>
+				<span class="icon bar"></span>
+				</button>
+				<a class="brand" href="#">Bitstarter</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row-fluid heading">
+			<div class="span12">
+				<h1>Product</h1>
+			</div>
+		</div>
+		<div class="row-fluid subheading">
+			<div class="span12">
+				<p class="lead">One sentence description</p>
+			</div>
+		</div>
+		<div class="row-fluid pitch">
+			<div class="span5 offset1 video">
+				<img class="img-polaroid" src="http://placehold.it/480x300">
+			</div>
+
+			<div class="span5 actions">
+				<div class="span8 offset2">
+					<div class="statistics">
+						<div class="span4">
+							<div class="linediv-l">
+								<h3>1000</h3> <p>backers</p>
+							</div>
+						</div>
+						<div class="span4">
+							<div class=linediv-r">
+								<h3>10</h3> <p>days left</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			<div class="span10 offset1">
+				<div class="thermometer progress active">
+					<div class="bar bar-success" style="width" 60%;"></div>
+					<div class="bar bar-warning" style="width: 40%;"></div>
+				</div>
+			</div>
+			<div class="span6 offset3 order">
+				<button class="btn btn-success btn-large">Preorder</button>
+			</div>
+			<div class="span8 offset2 social">
+				<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+				<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+			</div>
+		</div>
+	</div>
+
+	
+	
+					
+	
+
+
+
+
+	
  		<div class -"row navigation">
 		<div class  = "span2 logo">
 		Logo
@@ -98,5 +245,6 @@
 		</div>
 		</body>
 	</html>
+
 
 
